# cdf_cpp

./: .gitignore  CMakeLists.txt  main.cpp
cdf37_1-dist/samples/: CMakeLists.txt
include/cdf_cpp/: cdf_cpp.h  cdf_error.h  cdf_file.h  convertor.h  txt_file.h  variable.h
src/: cdf_cpp.cpp  cdf_error.cpp  cdf_file.cpp  convertor.cpp  txt_file.cpp  variable.cpp
test/: cdf_cpp_test.cpp  gtest_main.cpp
test/data/03/: ATU_20040301.cdf  ATU_20040301.txt  ATU_20040302.cdf  ATU_20040302.txt  ATU_20040303.cdf  ATU_20040303.txt  ATU_20040304.cdf  ATU_20040304.txt  ATU_20040305.cdf  ATU_20040305.txt  ATU_20040306.cdf  ATU_20040306.txt  ATU_20040307.cdf  ATU_20040307.txt  ATU_20040308.cdf  ATU_20040308.txt  ATU_20040309.cdf  ATU_20040309.txt  ATU_20040310.cdf  ATU_20040310.txt  ATU_20040311.cdf  ATU_20040311.txt  ATU_20040312.cdf  ATU_20040312.txt  ATU_20040313.cdf  ATU_20040313.txt  ATU_20040314.cdf  ATU_20040314.txt  ATU_20040315.cdf  ATU_20040315.txt  ATU_20040316.cdf  ATU_20040316.txt  ATU_20040317.cdf  ATU_20040317.txt  ATU_20040318.cdf  ATU_20040318.txt  ATU_20040319.cdf  ATU_20040319.txt  ATU_20040320.cdf  ATU_20040320.txt  (+12 more)
test/data/09/: ATU_19850909.cdf  ATU_19850909.txt  ATU_19850910.cdf  ATU_19850910.txt  ATU_19850911.cdf  ATU_19850911.txt  ATU_19850912.cdf  ATU_19850912.txt  ATU_19850913.cdf  ATU_19850913.txt  ATU_19850914.cdf  ATU_19850914.txt  ATU_19850915.cdf  ATU_19850915.txt  ATU_19850916.cdf  ATU_19850916.txt  ATU_19850917.cdf  ATU_19850917.txt  ATU_19850918.cdf  ATU_19850918.txt  ATU_19850919.cdf  ATU_19850919.txt  ATU_19850920.cdf  ATU_19850920.txt  ATU_19850921.cdf  ATU_19850921.txt  ATU_19850922.cdf  ATU_19850922.txt  ATU_19850923.cdf  ATU_19850923.txt  ATU_19850924.cdf  ATU_19850924.txt  ATU_19850925.cdf  ATU_19850925.txt  ATU_19850926.cdf  ATU_19850926.txt  ATU_19850927.cdf  ATU_19850927.txt  ATU_19850928.cdf  ATU_19850928.txt  (+6 more)
test/data/10/: ATU_20161001.cdf  ATU_20161001.txt  ATU_20161002.cdf  ATU_20161002.txt  ATU_20161003.cdf  ATU_20161003.txt  ATU_20161004.cdf  ATU_20161004.txt  ATU_20161005.cdf  ATU_20161005.txt  ATU_20161006.cdf  ATU_20161006.txt  ATU_20161007.cdf  ATU_20161007.txt  ATU_20161008.cdf  ATU_20161008.txt  ATU_20161009.cdf  ATU_20161009.txt  ATU_20161010.cdf  ATU_20161010.txt  ATU_20161011.cdf  ATU_20161011.txt  ATU_20161012.cdf  ATU_20161012.txt  ATU_20161013.cdf  ATU_20161013.txt  ATU_20161014.cdf  ATU_20161014.txt  ATU_20161015.cdf  ATU_20161015.txt  ATU_20161016.cdf  ATU_20161016.txt  ATU_20161017.cdf  ATU_20161017.txt  ATU_20161018.cdf  ATU_20161018.txt  ATU_20161019.cdf  ATU_20161019.txt  ATU_20161020.cdf  ATU_20161020.txt  (+22 more)
test/data/12/: FHB_19811201.cdf  FHB_19811201.txt  FHB_19811202.cdf  FHB_19811202.txt  FHB_19811203.cdf  FHB_19811203.txt  FHB_19811204.cdf  FHB_19811204.txt  FHB_19811205.cdf  FHB_19811205.txt  FHB_19811206.cdf  FHB_19811206.txt  FHB_19811207.cdf  FHB_19811207.txt  FHB_19811208.cdf  FHB_19811208.txt  FHB_19811209.cdf  FHB_19811209.txt  FHB_19811210.cdf  FHB_19811210.txt  FHB_19811211.cdf  FHB_19811211.txt  FHB_19811212.cdf  FHB_19811212.txt  FHB_19811213.cdf  FHB_19811213.txt  FHB_19811214.cdf  FHB_19811214.txt  FHB_19811215.cdf  FHB_19811215.txt  FHB_19811216.cdf  FHB_19811216.txt  FHB_19811217.cdf  FHB_19811217.txt  FHB_19811218.cdf  FHB_19811218.txt  FHB_19811219.cdf  FHB_19811219.txt  FHB_19811220.cdf  FHB_19811220.txt  (+12 more)
